--- a/D1/P3.md
+++ b/D1/P3.md
@@ -27,6 +27,6 @@ Modifica sólo la línea que tenga tus iniciales.
 | R. V. JAVIER | <!--enlace-->                                                           |
 | R. N. CRISTIAN | <!--enlace-->                                                           |
 | R. L. ALBERTO | <!--enlace-->                                                           |
-| R. V. GERMAN | <!--enlace-->                                                           |
+| R. V. GERMAN |https://github.com/germanrv20/practicas-ISE/blob/main/P3-resultados.md|(https://github.com/germanrv20/practicas-ISE/blob/main/P3-resultados.md)
 | V. R. ELENA | <!--enlace-->                                                           |
 | V. G. HUGO | <!--enlace-->                                                           |![image](https://github.com/user-attachments/assets/0eb38cad-1989-441d-b6a3-c71c5564b6d1)
