--- a/B3/P3.md
+++ b/B3/P3.md
@@ -22,7 +22,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | Q. P. ANDREA KUNPING | <!--enlace-->                                                           |
 | R. S. ALEJANDRO | <!--enlace-->                                                           |
 | S. M. M. FRANCISCO | <!--enlace-->                                                           |
-| V. B. JOSE ANDRES | <!--enlace-->                                                           |
+| V. B. JOSE ANDRES | [https://github.com/joseandress18/practicas-ISE/blob/main/P3-resultados.md](https://github.com/joseandress18/practicas-ISE/blob/main/P3-resultados.md)                                                           |
 | V. R. FERNANDO | <!--enlace-->                                                           |
 | V. A. GABRIEL | <!--enlace-->                                                           |
 | V. S. CRISTINA | <!--enlace-->                                                           |![image](https://github.com/user-attachments/assets/f96160e5-b965-4bb4-8533-e2eb760b4923)
