--- a/D1/P3.md
+++ b/D1/P3.md
@@ -4,7 +4,7 @@ Modifica sólo la línea que tenga tus iniciales.
 
 | Nombre       | Enlace                                                                   |
 | --------------- | ---------------------------------------------------------- |
-| A. O. PEDRO LUIS | <!--enlace-->                                                           |
+| A. O. PEDRO LUIS | [https://github.com/pabril03/practicas-ISE/blob/main/P3-resultados.md](https://github.com/pabril03/practicas-ISE/blob/main/P3-resultados.md)                                                           |
 | A. L. ANA MARINA | <!--enlace-->                                                           |
 | A. L. GONZALO | <!--enlace-->                                                           |
 | C. V. DANIEL | <!--enlace-->                                                           |
