--- a/D1/P3.md
+++ b/D1/P3.md
@@ -26,7 +26,7 @@ Modifica sólo la línea que tenga tus iniciales.
 | R. G. PABLO | <!--enlace-->                                                           |
 | R. V. JAVIER | <!--enlace-->                                                           |
 | R. N. CRISTIAN | <!--enlace-->                                                           |
-| R. L. ALBERTO | <!--enlace-->                                                           |
+| R. L. ALBERTO | https://github.com/albertorl22/practicas-ISE/blob/main/P3_resultados.md |
 | R. V. GERMAN | <!--enlace-->                                                           |
 | V. R. ELENA | <!--enlace-->                                                           |
 | V. G. HUGO | <!--enlace-->                                                           |![image](https://github.com/user-attachments/assets/0eb38cad-1989-441d-b6a3-c71c5564b6d1)
