Agrego enlace a mi bitácora de la práctica 3

--- a/D1/P3.md
+++ b/D1/P3.md
@@ -12,7 +12,7 @@ Modifica sólo la línea que tenga tus iniciales.
 | C. L. JOAQUÍN | <!--enlace-->                                                           |
 | F. G. CANDELA | <!--enlace-->                                                           |
 | F. R. FRANCISCO | <!--enlace-->                                                           |
-| F. R. OSCAR | <!--enlace-->                                                           |
+| F. R. OSCAR | [https://github.com/oscar0310/practicas-ISE/blob/main/P3-resultados.md](https://github.com/oscar0310/practicas-ISE/blob/main/P3-resultados.md)                                                        |
 | G. G. MARIO | <!--enlace-->                                                           |
 | G. F. JAVIER | <!--enlace-->                                                           |
 | H. A. ANTONIO | <!--enlace-->                                                           |
