--- a/D1/P3.md
+++ b/D1/P3.md
@@ -6,7 +6,7 @@ Modifica sólo la línea que tenga tus iniciales.
 | --------------- | ---------------------------------------------------------- |
 | A. O. PEDRO LUIS | <!--enlace-->                                                           |
 | A. L. ANA MARINA | <!--enlace-->                                                           |
-| A. L. GONZALO | <!--enlace-->                                                           |
+| A. L. GONZALO | [https://github.com/Gonzalo845/practicas-ISE/blob/main/P3-resultados.md](https://github.com/Gonzalo845/practicas-ISE/blob/main/P3-resultados.md)                                                           |
 | C. V. DANIEL | <!--enlace-->                                                           |
 | C. S. ALEJANDRO | <!--enlace-->                                                           |
 | C. L. JOAQUÍN | <!--enlace-->                                                           |
