--- a/D1/P3.md
+++ b/D1/P3.md
@@ -28,5 +28,5 @@ Modifica sólo la línea que tenga tus iniciales.
 | R. N. CRISTIAN | <!--enlace-->                                                           |
 | R. L. ALBERTO | <!--enlace-->                                                           |
 | R. V. GERMAN |https://github.com/germanrv20/practicas-ISE/blob/main/P3-resultados.md|(https://github.com/germanrv20/practicas-ISE/blob/main/P3-resultados.md)
-| V. R. ELENA | <!--enlace-->                                                           |
+| V. R. ELENA |[https://github.com/elenavallejor/practicas-ISE/blob/main/P3.md](https://github.com/elenavallejor/practicas-ISE/blob/main/P3.md)|
 | V. G. HUGO | <!--enlace-->                                                           |![image](https://github.com/user-attachments/assets/0eb38cad-1989-441d-b6a3-c71c5564b6d1)
