--- a/B3/P3.md
+++ b/B3/P3.md
@@ -24,5 +24,5 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | S. M. M. FRANCISCO | <!--enlace-->                                                           |
 | V. B. JOSE ANDRES | [https://github.com/joseandress18/practicas-ISE/blob/main/P3-resultados.md](https://github.com/joseandress18/practicas-ISE/blob/main/P3-resultados.md)                                                           |
 | V. R. FERNANDO | <!--enlace-->                                                           |
-| V. A. GABRIEL | <!--enlace-->                                                           |
+| V. A. GABRIEL | [https://github.com/gabrielvico02/practicas-ISE/blob/main/P3-resultados.pdf](https://github.com/gabrielvico02/practicas-ISE/blob/main/P3-resultados.pdf)                                                           |
 | V. S. CRISTINA | <!--enlace-->                                                           |![image](https://github.com/user-attachments/assets/f96160e5-b965-4bb4-8533-e2eb760b4923)
