--- a/D1/P3.md
+++ b/D1/P3.md
@@ -9,7 +9,7 @@ Modifica sólo la línea que tenga tus iniciales.
 | A. L. GONZALO | [https://github.com/Gonzalo845/practicas-ISE/blob/main/P3-resultados.md](https://github.com/Gonzalo845/practicas-ISE/blob/main/P3-resultados.md)                                                           |
 | C. V. DANIEL | <!--enlace-->                                                           |
 | C. S. ALEJANDRO | <!--enlace-->                                                           |
-| C. L. JOAQUÍN | <!--enlace-->                                                           |
+| C. L. JOAQUÍN | [https://github.com/juakincruzz/practicas-ISE/blob/main/P3-L1-resultados.md] (https://github.com/juakincruzz/practicas-ISE/blob/main/P3-L1-resultados.md) |
 | F. G. CANDELA | <!--enlace-->                                                           |
 | F. R. FRANCISCO | <!--enlace-->                                                           |
 | F. R. OSCAR | [https://github.com/oscar0310/practicas-ISE/blob/main/P3-resultados.md](https://github.com/oscar0310/practicas-ISE/blob/main/P3-resultados.md)                                                        |
