Agrego enlace a mi bitácora para la práctica 3

--- a/B3/P3.md
+++ b/B3/P3.md
@@ -14,7 +14,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | L. U. JOSE MARIA | <!--enlace-->                                                           |
 | M. C. ALEJANDRO | <!--enlace-->                                                           |
 | M. D. JUAN CARLOS |[https://github.com/jcarlosmoradiaz2ugr/practicas-ISE/blob/main/P3.md](https://github.com/jcarlosmoradiaz2ugr/practicas-ISE/blob/main/P3.md) |
-| N. M. ALEJANDRO | <!--enlace-->                                                           |
+| N. M. ALEJANDRO |  [https://github.com/Alexanm04/practicas-ISE/blob/0014c89514fd935720d24db34ab22fb285cc4531/P3-resultados.md](https://github.com/Alexanm04/practicas-ISE/blob/0014c89514fd935720d24db34ab22fb285cc4531/P3-resultados.md)                                                         |
 | O. C. FRANCESC | <!--enlace-->                                                           |
 | O. J. JOSE IGNACIO | <!--enlace-->                                                           |
 | P. P. ELISA | <!--enlace-->                                                           |
