--- a/B3/P3.md
+++ b/B3/P3.md
@@ -18,7 +18,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | O. C. FRANCESC | [https://github.com/xescoliver/practicas-ISE/blob/main/P3.md](https://github.com/xescoliver/practicas-ISE/blob/main/P3.md) |
 | O. J. JOSE IGNACIO | <!--enlace-->                                                           |
 | P. P. ELISA | [https://github.com/ElisaPereiraPadilla/practicas-ISE/blob/main/P3.md](https://github.com/ElisaPereiraPadilla/practicas-ISE/blob/main/P3.md)                                                          |
-| P. G. INÉS | <!--enlace-->                                                           |
+| P. G. INÉS | [https://github.com/inesprados/practicas-ISE/blob/main/P3-L1_resultados.md](https://github.com/inesprados/practicas-ISE/blob/main/P3-L1_resultados.md)                                                           |
 | Q. P. ANDREA KUNPING | [https://github.com/akqp2104/practicas-ISE/blob/main/P3-resultados.md](https://github.com/akqp2104/practicas-ISE/blob/main/P3-resultados.md)                                                           |
 | R. S. ALEJANDRO | <!--enlace-->                                                           |
 | S. M. M. FRANCISCO | [https://github.com/Fransmm/practicas-ISE/blob/main/P3.md](https://github.com/Fransmm/practicas-ISE/blob/main/P3.md)                                                          |
