--- a/B3/P3.md
+++ b/B3/P3.md
@@ -7,7 +7,7 @@ Modifica solo la línea que contenga las iniciales de tus apellidos y tu nombre.
 | A. G. JOSE MANUEL | <!--enlace-->                                                           |
 | C. M. JORGE | [https://github.com/canomelero/practicas-ISE/blob/main/P3-resultados.md](https://github.com/canomelero/practicas-ISE/blob/main/P3-resultados.md)                                                           |
 | C. G. VICTOR | [https://github.com/vicmaviclu/practicas-ISE/blob/main/P3-resultados.md](https://github.com/vicmaviclu/practicas-ISE/blob/main/P3-resultados.md)       |
-| F. P. MARINO | <!--enlace-->                                                           |
+| F. P. MARINO |[https://github.com/marinoferperez/practicas-ISE/blob/main/P3-resultados.md](https://github.com/marinoferperez/practicas-ISE/blob/main/P3-resultados.md)                               |
 | F. B. MIGUEL | [https://github.com/miguelfnez/practicas-ISE/blob/main/P3-resultados.md](https://github.com/miguelfnez/practicas-ISE/blob/main/P3-resultados.md)  |
 | I. MEHDI | [https://github.com/ermedimrc/practicas-ISE/blob/main/P3-resultados.md](https://github.com/ermedimrc/practicas-ISE/blob/main/P3-resultados.md)   |
 | J. S. DAVID | [https://github.com/davidjs11/practicas-ISE/blob/main/P3.md](https://github.com/davidjs11/practicas-ISE/blob/main/P3.md)|
