He actualizado los resultados de la Práctica 4

--- a/D1/P4.md
+++ b/D1/P4.md
@@ -16,7 +16,7 @@ Modifica sólo la línea que tenga tus iniciales.
 | G. G. MARIO | <!--enlace-->                                                           |
 | G. F. JAVIER | <!--enlace-->                                                           |
 | H. A. ANTONIO | <!--enlace-->                                                           |
-| H. M. ANDRES | <!--enlace-->                                                           |
+| H. M. ANDRES | [https://github.com/AndresHurtado001/practicas-ISE/blob/main/P4-resultados.md](https://github.com/AndresHurtado001/practicas-ISE/blob/main/P4-resultados.md)                                                           |
 | J. U. JUAN LUIS | <!--enlace-->                                                           |
 | L. J. MAURICIO | <!--enlace-->                                                           |
 | M. M. MANUEL | <!--enlace-->                                                           |
